Final project num 11 done Added service logic and new functionality All postman tests passed Added unit tests